<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/registration_welcome"
            android:textColor="@color/black_typo"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/registration_create_account"
            android:textColor="@color/grey_light"
            android:textSize="16dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/txt_background"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:hint="@string/registration_username"
            android:padding="13dp"
            android:fontFamily="@font/raleway"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/txt_background"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/registration_email"
            android:padding="13dp"
            android:fontFamily="@font/raleway"
            android:textSize="16dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/txt_background"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/registration_password"
            android:padding="13dp"
            android:fontFamily="@font/raleway"
            android:textSize="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/txt_background"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:hint="@string/registration_confirm_password"
            android:padding="13dp"
            android:fontFamily="@font/raleway"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_filled_circled"
            android:text="@string/registration_button_create_account"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="@font/raleway_bold"/>

        <TextView
            android:id="@+id/txtAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/registration_already_have_account"
            android:textColor="@color/black_typo"
            android:textSize="16dp"
            android:fontFamily="@font/raleway"/>

        <TextView
            android:id="@+id/txtSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/registration_sign_in"
            android:textColor="@color/orange_secondary"
            android:fontFamily="@font/raleway"
            android:textSize="16dp"
            android:padding="5dp"/>

    </LinearLayout>

</RelativeLayout>